fuse2: don't hardcode cwd
this way people don't have to change the testcase code for their setups.
apparently libfuse does a chdir("/"), so we need to save the cwd before we
call libfuse.

Signed-off-by: Tycho Andersen <tycho@tycho.pizza>

--- a/fuse2/Makefile
+++ b/fuse2/Makefile
@@ -7,7 +7,7 @@ build: fuse main
 check: fuse main
 	modprobe fuse
 	mkdir -p mount
-	unshare -Urpm --fork ./main
+	unshare -Urpm --fork --wd=$(CURDIR) ./main
 
 clean:
 	-rm -rf fuse main mount
